--- a/.github/workflows/e2eAccessibility.yaml
+++ b/.github/workflows/e2eAccessibility.yaml
@@ -44,6 +44,7 @@ jobs:
       browser_version: "latest"
       exclude_tags: "none"
       fail_on_test_failures: false
+      maven_options: "-Dtest.failure.ignore=true"
       aws_role: ${{ inputs.aws_role || vars.ACCOUNT_NONPROD_TEST_OIDC_ROLE }}
       bucket_name: ${{ inputs.bucket_name || vars.ACCOUNT_NONPROD_S3_REPORT_BUCKET }}
       bucket_key: ${{ inputs.bucket_key || vars.S3_REPORT_BUCKET_KEY }}
