--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,12 @@
             <artifactId>ion-java</artifactId>
             <version>${ion-java.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.5.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
